[package]
name = "dping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
dotenv = "0.15.0"
once_cell = "1.16.0"
serenity = "0.11.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
